# netchess

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: bitboard.cpp  bitboard.h  types.h
test/: bitboard_test.cpp
